--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">MqttCodesend</string>
-    <string name="csinfo">
-        These codes are recorded with a Raspberry Pi, a 433 receiver and the 433Utils software.
-        <a href='http://www.princetronics.com/how-to-read-433-mhz-codes-w-raspberry-pi-433-mhz-receiver/'>Click here</a>
+    <string name="help_header">Help for Mqttcodesend
+    </string>
+    <string name="help">"Start by opening Settings in the menu.\nChoose 'Mqtt broker IP' and fill in the IP-address of your Mqtt broker.\nNext, click Buttons. Here you can set the label, topic and codes for each button. When a button is clicked, a Mqtt message are sent to the specified Mqtt broker.The message has the button's topic and the code is the payload.\nIf you dont set a label for a button it won't be activated."
+    </string>
+
+    <string name="csinfo">These codes are recorded with a Raspberry Pi, a 433 receiver and the 433Utils software.
         \n\n
 
         #Nexa
